# SDN

./: .gitignore  ARCHITECTURE.md  BRIEFING.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  STATUS.md  context.md  pyproject.toml  requirements.txt
collector/: __init__.py  build_datasets.py  packet_capture.py  scrape_ovs.py  scrape_prometheus.py
config/: faucet.yaml  gauge.yaml
data/domain_lists/: bank_domains.txt  bulk_domains.txt  voice_domains.txt  web_domains.txt
docker/: docker-compose.yml
docker/faucet/: Dockerfile
docker/mininet/: Dockerfile  requirements.txt  start-ovs.sh
docker/ml-orchestrator/: Dockerfile  requirements.txt
docker/prometheus/: Dockerfile  prometheus.yml
docs/: DATA_COLLECTION_GUIDE.md  QUICK_REFERENCE.md
faucet/: faucet.yaml  gauge.yaml
mininet/: topo.py  traffic_profiles.py
ml/notebooks/: 01_data_exploration.ipynb  02_train_classifier.ipynb  03_train_predictor.ipynb  04_model_evaluation.ipynb
notebooks/: 01_data_exploration.py  02_train_classifier.py  03_train_predictor.py
orchestrator/: __init__.py  ml_classifier.py  orchestrator.py  policy_engine.py  qos_enforcer.py  sni_classifier.py  types.py
orchestrator/stubs/: __init__.py  classifier_stub.py  predictor_stub.py
scripts/: banking_priority_demo.py  collect_training_data.sh  generate_data.py  run_demo.sh  run_mvp.sh  run_phase2_scenario.py  run_scenario.py  setup_network.py  setup_qos.sh  start_host_mininet.sh  start_multipath_mininet.sh  test_packet_capture.py
sdn_ml/: __init__.py
sdn_ml/controller/: __init__.py  faucet_controller.py  traffic_manager.py
tests/: test_features.py  test_models.py  test_packet_capture_logic.py  test_pipeline.py
topologies/: topo.py  topo_multipath.py  traffic_profiles.py
(+20 files in other folders)
