[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdn-traffic-management"
version = "0.1.0"
description = "ML-Driven Adaptive Traffic Management in SDN"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "scipy>=1.11.0",
    "prometheus-client>=0.17.0",
    "requests>=2.31.0",
    "scapy>=2.5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["collector", "orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
